Added champion page with id, title, image and lore

--- a/RitoAPI/Views/Home/ChampionList.cshtml
+++ b/RitoAPI/Views/Home/ChampionList.cshtml
@@ -26,7 +26,7 @@
               <img src="~/championImg/@imageFile " />
             </td>
             <td>
-                @Html.ActionLink(item.id, "showChampion", "Home", new { id = item.id }, null)
+                @Html.ActionLink(item.id, "ShowChampion", "Home", new { id = item.id }, null)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.title)
